# genai-rag-multimodal

./: .gitignore  README.md  pyproject.toml
genai_rag_multimodal/: analyze_assets_openai.py
genai_rag_multimodal/analyze_assets/: config.py  core.py  models.py  utils.py
genai_rag_multimodal/scripts/: run_analysis.py
src/: analyze_assets_ollama_qwen.py
