[project]
name = "genai-rag-multimodal"
version = "0.1.0"
description = ""
authors = [
    {name = "Tu Nombre",email = "tuemail@ejemplo.com"}
]
readme = "README.md"
requires-python = "=3.11.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "python-dotenv (>=1.0,<2.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langchain-core (>=0.3.79,<0.4.0)",
    "openai (>=1.0.0,<2.0.0)",
    "ollama (>=0.6.0,<0.7.0)"
]

[tool.poetry]
packages = [{include = "genai_rag_multimodal"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"